# pybinds

./: .editorconfig  .gitignore  .justfile  Cargo.toml  README.md  pyproject.toml  test.py
python/pybinds/: __init__.py  moving_average.py
src/: lib.rs
tests/: test_movering_average.py
